// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboboxMulti rendering should add additional attributes to input field when component is blurred 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-1-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="ComboboxMulti__wrapper"
            role="searchbox"
            tabindex="0"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-1-label"
              autocomplete="off"
              class="ComboboxMulti__input"
              data-lpignore="true"
              data-test="true"
              placeholder="type here..."
              title="some title"
              value=""
            />
            <svg
              aria-haspopup="true"
              aria-label="open menu"
              class="ComboboxMulti__dropdownIcon"
              data-toggle="true"
              fill="currentColor"
              height="1em"
              role="button"
              stroke="currentColor"
              stroke-width="0"
              type="button"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128 192l128 128 128-128z"
              />
            </svg>
          </div>
          <ul
            aria-labelledby="downshift-1-label"
            class="List"
            id="downshift-1-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComboboxMulti rendering should initially render empty component correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="ComboboxMulti__wrapper"
            role="searchbox"
            tabindex="0"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="ComboboxMulti__input"
              data-lpignore="true"
              placeholder="type here..."
              value=""
            />
            <svg
              aria-haspopup="true"
              aria-label="open menu"
              class="ComboboxMulti__dropdownIcon"
              data-toggle="true"
              fill="currentColor"
              height="1em"
              role="button"
              stroke="currentColor"
              stroke-width="0"
              type="button"
              viewBox="0 0 512 512"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M128 192l128 128 128-128z"
              />
            </svg>
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
